--- a/保研回忆录.md
+++ b/保研回忆录.md
@@ -1,62 +1,110 @@
+
 - [写在前面的话](#写在前面的话)
 - [故事从哪说起](#故事从哪说起)
-
+- [人生是旷野，这是建议而非指南](#人生是旷野这是建议而非指南)
 ## 写在前面的话
 我成功的经验是没有的，失败的经验倒是不少。  
-
-
+原谅我以一种记流水账的方式诉说这一切。
+README.md中`This is a gaze backward for me, not a guide forward for you`这句话我想了很久，也适合这里。
 ## 故事从哪说起
+区分一下，与我
+**<span style="color: gray; font-style: italic;">Time：4.20 - 7.10</span>**
+`4.20` 做好了简历，几封套磁信正式拉开了保研的序幕。    
 ![alt text](./pic/image.png)
-
-联系到了
-
----
-**<span style="color: gray; font-style: italic;">Time：6.20-7.10</span>**   
-末九、中九夏令营都投了一遍，夏0营。
-
-期间联系了梦导A，导的反馈很好，让我预推免再报。结合往年的情况，我也感觉问题也不大。当时受到的反馈是，进了面试应该没问题。
+老师都特别客气，大多都有回复，但没有后续，大多是提到后续报名了夏令营再联系。期间联系到了梦导A，可能因为是新老师，给了特别积极的回复。加了微信，约了一个腾讯会议聊了聊，当时特别荣幸，我以为会有个面试啥的，没想到老师先用PPT介绍了一下自己。（他可能没意识到自己有多抢手），研究方向、老师、title和地域在我心中都拉满了。
+                  
+`6.20 - 7.10` 大部分夏令营都开了，把末九、中九夏令营都投了一遍，意料之中的夏0营。
+不出意料的没入梦校A的夏令营，梦导A让我预推免再报，预推免的机会更大。结合往年的情况，我也感觉问题也不大。
 
 ---
-
-**<span style="color: gray; font-style: italic;">Time：8.3-8.27</span>**   
+**<span style="color: gray; font-style: italic;">Time：8.3-8.27</span>**  
+在家线上拿了一个学校B的保底offer，当时虽然没有其他offer，也完全不认为有去的可能性。  
+在家闲着没事干，准备等梦校A的预推免，也不需要报名夏令营。因此联系了学校B方向比较match的导师B，导师B要求考核，内容是论文汇报以及复现尝试。我想闲着也是闲着，不如学点东西，以学习的心态做了二十多天考核。
+`8.27` 老师说暂时把名额留给我。   
 
 --- 
-
 
 **<span style="color: gray; font-style: italic;">Time：8.28-9.2</span>**   
+梦校A预推免开了，我一半是真想直博，一半是想让老师捞我，于是和梦导A提出来直博，老师要求论文讲解+项目介绍。三天时间内精读了论文并准备PPT的介绍。
+`9.2`在腾讯会议聊了半个小时。  
+老师就是直博的，可能淋过雨，他也见过别人淋雨，再加上我没有paper，因此老师建议我先上硕士，因为研一研二都可以转博，同时我也不是百分之百的坚定直博，因此决定先报专硕。
+老师的判断是：报专硕进课题组应该没问题。  
+结合往年的情况，我的判断是：应该没什么问题。
 
 --- 
-
-
 **<span style="color: gray; font-style: italic;">Time：9.3-9.14</span>**   
+报了梦校A的预推免，等结果。  
+期间特别放松，梦导A在我心里优先级无限高，因此其他老师一个没联系，其他学校的预推免也没基本没报。
+`9.8` 导师B要求我两天内确认是否去学校B，确认了就一定要来，我与导师A沟通，他再次传递出加入他课题组问题不大的意思。我不想后面再鸽导师B，因此直接拒了导师B。  
+    
+`9.14` 刷到了别人的小红书——已经进入了梦校A的复试。 
+被默拒了啊，我去问导师A “能捞一下我吗？”——“我也没有办法捞~”
+很难描述当时的心情，感觉自己碎了。
 
 --- 
-
-**<span style="color: gray; font-style: italic;">Time：9.15-9.20</span>**   
-
----
-
-**<span style="color: gray; font-style: italic;">Time：9.21</span>**   
+**<span style="color: gray; font-style: italic;">Time：9.15-9.19</span>**   
+把还开着的预推免全报了一遍。是一场徒劳而顽强的挣扎。
+整个过程进的唯一一个复试，300进面发0个offer，面得再好也是候补。
+当时感觉自己大概率要去学校B了，因此先联系了老师，到时候能有一个满意的方向和老师。和老师约了一场面试。很好的面试体验。她是真的想了解我做的事情。虽然老师没有接触过我做的事情，但老师会从她的现有知识进行推断，也会提出来她的疑问。
 
 ---
-
-**<span style="color: gray; font-style: italic;">Time：9.22-9.27</span>**   
+**<span style="color: gray; font-style: italic;">Time：9.19-9.20</span>**   
+`9.19` 给梦导C发了邮件，约定了明天的面试。
+`9.20 14.30` 十二分钟的PPT项目介绍，项目中有很大一部分和老师课题组中的研究内容相关，因此被拷打的很厉害。总过面了半个小时
+`9.20 17.00` 收到导师C的邮件——邀请我加入课题组，并要求尽快回复以便预留名额。我立马表示了确定去的意向，人是飘飘然的。
 
 ---
+**<span style="color: gray; font-style: italic;">Time：9.21-9.27</span>**   
+这是起起伏伏的五天。
+`9.21` 收到梦导C的邮件，询问了我的毕设安排，给了我一些学习路线，约我一周后聊一聊研究方向，甚至顺便给了我英语学习的建议。woc，这是真想要我啊，又确认了梦校C是弱com（导师说可以推荐我进面试），感觉稳了。
+`9.22-9.24` 详细看了导师C的近两年的论文，感觉自己明天就是研究生了，时刻准备进组。
+`9.25` 早上给老师C发了邮件，询问对于研究方向的讨论，我还需要做哪些准备。上午刷到群友讨论说梦校C招生名额出了问题，且某9学生被导师C同组的另一位导师鸽了（上周那位导师说有名额，这周就没有名额了），又加之我的导师C一直没回复我的邮件，我想—寄了。真把我被鸽了？但没有这样鸽学生的，不可能搞默拒的。没看邮件？以往都是秒回的。为什么不回呢？不知道——等。
+晚上十点半，导师C回复了我的邮件，提到面试的时候，我可以明确指出“我已经被老师录取”，又继续和我讨论了研究方向。我悬着的心放下了，应该不会出什么问题了吧。也立马要求加了微信，不想再这样焦灼的等了。  
+`9.26` 梦校B线上面试，我一进腾讯会议，面试比较走流程。我想我稳了。等928填系统就行。  
+`9.27` 明天就填系统了，满怀期待地等梦校B的面试结果。从昨天晚上到今天晚上，我的心情从山峰到了平地。你问谷底啊，谷地还在后面呢。
+```
+9.27 16.01 老师，我目前还没有收到预录取的邮件通知，教务那边联系不上，请问今年有发放预录取通知吗？
+9.27 22.58  “学校给我们的第一批推免名额比去年少很多，接下来估计学校会发放更多名额，学院应该是一批一批的发录取通知。我觉得最后的名额总数不应该小于去年的人数。”，这是分管招生老师的回复。 理解。现在是应该只有参加过夏令营并得到预录取的学生，发了录取通知。这次面试的都需要等等。
+9.27 22.59 多谢老师，我再等等，明天系统我第一志愿肯定是填学校C
+```
 
+---
 **<span style="color: gray; font-style: italic;">Time：9.28</span>**   
+填了两个志愿，一个保底，一个梦校C，空了一个留给未知。  
+`10.30` 收到了梦校C的邮件，我在候补名单中。
+老师给我的消息是——我们选定的人，全部处于候补。也就是昨晚给你说的，只给夏令营发了offer，刚面试的暂时没发。
+顶级煎熬的一天，只有一个字——等。
+傍晚才把事情想明白—— 目前要等夏令营的offer释放掉才能有新的名额，也就是说需要明天夏令营的同学填了学校C，但明天确认被其他学校录取，这个流程走完后，教务那边才会发放新的offer。
+想了想手里几个铁offer，没有一个是真满意的。我还能做什么呢？这下是真到谷底了。我上了两把号
+我还能做点什么？我去小红书捞了学校B的学长，境遇如此相同——同样在用学校B做保底，等另外学校的候补，他没等到。
+明天 我能等吗？我等的起吗？已经做好了决定，拖到学校B的确定deadline，等不到就算了吧。终究是无缘了
+我找不到我能做的事情了。我不知道
+`21.30` 出去骑哈罗兜了一圈，已经能接受现状了——大概率无缘梦校C了。哎
+`22.00` 朋友微信给我推了一个老师，学校D可能还有名额，加上微信，发了简历，语音聊了5分钟，老师说：“现在也来不及面试了，如果你决定来，等下我给你发个表，你填好给教务老师，明天直接填系统就行。”
+`23.00` 开始认真考虑了学校D，和学长打听了学校D的方向，不算很坑。不是自己喜欢的方向，进去后一片未知。
+`24.00` 和身边的保研er聊了聊天。我有答案了——最后还是选择冲了title。
 
 ---
-
 **<span style="color: gray; font-style: italic;">Time：9.29</span>**   
+梦校C是一点希望都没给我，十点半了，甚至复试通知都没给我发一个。  
+学校D发来了拟录取通知，犹豫了十分钟，还是颤抖了点了接受。  
+说真的，点完就有点后悔了。心中是一滩死水，对未来的担忧远大于眼下的喜悦。 
+下午给保底学校B之前联系的老师发了鸽信。
 
 ---
-
 **<span style="color: gray; font-style: italic;">Time：9.30</span>**   
-之前联系过的大牛问我来了吗
-
-最后给所有打扰过的老师道一声抱歉。
+之前有联系过的一个老师问我来他学校了吗
+**最后，对那些被我冒昧打扰过的老师道一声抱歉。**
 
 ---
+## 人生是旷野，这是建议而非指南
+聊聊我对保研的一些想法和建议吧。  
+回望这
+
+
+
+| ![赌狗圣经](./pic/赌狗圣经.png) | ![新版圣经](./pic/新版圣经.png) |
+|:--------:|:------------------:|
+| 这是圣经                     | 这也是圣经                     |
 
 
