--- a/保研回忆录.md
+++ b/保研回忆录.md
@@ -3,9 +3,10 @@
 - [故事从哪说起](#故事从哪说起)
 - [我的经历](#我的经历)
 ## 写在前面的话
+本文模板来自zyc同学，在此拜谢
+对于保研我并没有太多的感触，只记得不断的投不断的被拒不断的鸽，夏令营入营寥寥，预推免几个收获也并不可观
 我成功的经验是没有的，失败的经验倒是不少。  
-原谅我以一种记流水账的方式诉说这一切。  
-README.md中`This is a gaze backward for me, not a guide forward for you`这句话我想了很久，也适合这里。
+
 ## 故事从哪说起
 区分一下，与我  
 **<span style="color: gray; font-style: italic;">Time：4.20 - 7.10</span>**  
