--- a/保研回忆录.md
+++ b/保研回忆录.md
@@ -1,14 +1,16 @@
 
 - [写在前面的话](#写在前面的话)
-- [故事从哪说起](#故事从哪说起)
+- [个人Bg](#个人Bg)
 - [我的经历](#我的经历)
 ## 写在前面的话
-本文模板来自zyc同学，在此拜谢
-对于保研我并没有太多的感触，只记得不断的投不断的被拒不断的鸽，夏令营入营寥寥，预推免几个收获也并不可观
-我成功的经验是没有的，失败的经验倒是不少。  
+本文模板来自zyc同学，在此拜谢。
+对于保研我并没有太多的感触，只记得不断的投不断的被拒不断的鸽，整个人生似乎在这一场保研game中被确定大致方向了，以下我的经历或许能给你一些启发。
 
-## 故事从哪说起
-区分一下，与我  
+## 个人Bg
+CUMT（勉强算是中2吧，个人感觉在招生老师眼中跟末二区别不大） 夏令营7.84%  预推免7.94% CET-6 500左右 主持一段省创、主持并优秀结题一段校创，一段某大国重远程科研无产出（勉强算是做了点东西），竞赛方面全是水奖（包括但不限于全国大学生数学竞赛、国际大学生物理竞赛、蓝桥杯、大唐杯、五一建模等，包装一下最后省部及以上7项，校级以上20多吧）
+相比各位保研er，我的bg可以说很水了，科研无产出paper，竞赛无重量级国奖，低rk，这也注定了我的去向不会太好
+
+## 我的经历
 **<span style="color: gray; font-style: italic;">Time：4.20 - 7.10</span>**  
 `4.20` 做好了简历，几封套磁信正式拉开了保研的序幕。      
 ![alt text](./pic/image.png)
@@ -99,7 +101,7 @@
 **最后，对那些被我冒昧打扰过的老师道一声抱歉。**
 
 ---
-## 我的经历
+
 聊聊我对保研的一些想法和建议吧。  
 回望这
 我操作的是一坨屎
