--- a/保研回忆录.md
+++ b/保研回忆录.md
@@ -11,6 +11,56 @@ CUMT（勉强算是中2吧，个人感觉在招生老师眼中跟末二区别不
 相比各位保研er，我的bg可以说很水了，科研无产出paper，竞赛无重量级国奖，低rk，这也注定了我的去向不会太好
 
 ## 我的经历
+### 夏令营1 北京理工大学珠海校区085402通信工程专硕
+入营bar很迷，隔壁自动化10%开外无六级入了（有RM竞赛），通信这边我rk7点多%入的，但是我看绿群985很多高rk也报了珠海，却没入应该是刷oq了，最后还是被鸽穿了哈哈。
+入营考核很简单，线上5分钟ppt介绍，问了几个专业课很基础的问题（通信原理、数字信号处理），英文则是问了数字信号处理的一个经典问题（关于专业课，然后项目问的也很浅（感觉那边老师水平不高，后来我联系本部那边在珠海校区招生的导师，雷达所组面，被拷打了一个小时！！！！md，确实有水平）
+个人意见：珠海校区由于目前建设不完善，目前感觉就一个末九水平（湖大、重大这种），中九的title，适合211靠后、且目标研究所、国企的同学去。
+在此推荐一个珠海做民用雷达的老师，态度很好，没有一点架子，做的也是毫米波雷达信号处理的方向，相比SAR好了无数倍这种（想去的同学可以私聊我，我推微信），其实方向好坏我在报名的时候是一点不清楚的，当时我天真的认为雷达信号处理都是一样的，可以转智能驾驶算法哈哈（在此感谢zyc，要不是他告诉我，我真就去bit了）
+
+### 夏令营2 厦门大学柔性电子学院 电路与系统专硕
+	非常感谢厦大老师让我入营，本次夏令营体验不错，具体流程已经忘记了，大概就是前一天报到，第一天参观+讲座，第二天上午讲座下午五点给出考核（考核是给一篇论文，要求第二天8点之前把ppt做好发到邮箱进行汇报），第三天考核+导师双选，第四天公布结果＋离校，整体流程相对轻松。另外提一嘴厦门大学翔安校区也是蛮漂亮的，可惜没进信院/AI院，不然我直接去了哈哈哈。
+	由于第一次做这种论文汇报式的考核，我内心非常紧张和不安，当时和一位来自桂电的同学一起熬夜做，做了一晚上哈哈哈（最后效果还不错） ，在此推荐厦大柔电学院的苏晓倩老师，人非常好！！！老师做脑机接口/OECT等方向， 可以推去NTU读博，欢迎有意向的同学联系！
+
+
+### 夏令营3 中国科学院空间应用工程与科学中心
+这个所算是一个中所吧，夏令营流程是第一天到了有班车从地铁站接过去，下午就开始宣讲，第二天依然是宣讲（很无聊），第三天进行考核，整个行程非常非常非常赶，满分五分我给一分。在夏令营过程中很开心的认识到了来自北交的cxt，人很健谈，专业能力非常厉害，有很多科研成果（哇当时在他旁边压力爆大，确实竞赛非常强，工程能力非常厉害），此外我也注意到空间所夏令营生源非常好，有上交、浙大等名校，实验室宣讲的时候有一个本科清华的在电磁室直博，当时有点被震住了。
+接下来是考核内容方面，考核内容比较常规，第一面是所内负责招生的领导面，就是常规英文+专业课，简单看了看裸面过了。我面的是电子信息室，这个室比较海，招了很多人，组内会有二面（直博的话需要三面），当时我报了直博，最后被刷了（然后给我一个工程硕士，遂拒绝）
+
+
+### 夏令营4 电子科技大学深圳高等研究院无线技术与集成团队
+	当时成电深夏令营都快截止了，我随便报的这个团队，当时也不知道这个团队在成电是非常非常吊的（大伙都说无脑入，本部bar非常高，认识一个拿到复旦强组Offer的没过简历筛）………反正不知道怎么就拿到了，整体准备时间就3h左右，飞书线上面双机位，抽题库问。
+
+### 夏令营5 北京理工大学信电学院雷达技术研究院
+	当时联系到了bit的李阳老师，老师人非常好，过了一周左右给我安排了一场线上面试，然后来自Bit的一位高手拷打我了1h，当时土木楼的空调开得很低我却满头大汗，这也反映出我并没有很清楚我自己项目的细节、技术点，也为后面预推免手忙脚乱埋下了伏笔
+
+### 预推免1 天津大学电信学院
+因为去年去了很多天大，所以我就套了一个导师想试试，结果他妈的找到了老师就让我报预推免，报了之后就让我线下去面试，结果线下面试是走过场，真正去不去还是靠你联系的导师给你的排位。当天我去了之后，导师跟我说：“同学，这个我们还是非常想要你，但是前面夏令营、预推免第一批招了这么多人，你也知道这个顺序的问题”。然后我问我在他那边可以排到多少（如果比较靠前我就准备来），结果他不说具体的名次，打了个马虎眼就下了逐客令，当时我心想：真逆天啊这学校，你们这样不怕鸽穿吗？
+	果然929当天找我发消息了，但我是肯定不会去了，我也已读不回嘻嘻：
+
+
+
+
+### 预推免2 南开大学人工智能学院
+联系的人工智能著名的zjj老师，老师人很好！南开AI夏令营、预推免的bar都很高，今年预推免得211  rk1（还在候补），我套磁的直博入了，最后仔细想想还是不适合直博，就鸽了（大家不要学我这种行为，不太好，在此我也向zjj老师致歉）
+### 预推免3 北京理工大学集成电路与电子学院智能电子信息系统所
+
+
+	当时是在蓝群洛总的微信小群中得知这一消息（北理集电预推免开了），因此我就去把每个分所都投了一遍，这边来了一位老师给我电话面了之后就让我入营了。面试过程较为轻松，英文提问问我名字的由来哈哈，几位老师也非常和蔼挺好的，最后鸽了（非常抱歉！）
+### 预推免4 北京理工大学集成电路与电子学院射频技术研究所
+摆烂了，北京住宿真贵呀……… 当天晚上智能电子所给我打电话说给我专硕，我就开摆了，也是意料之中的没过。
+
+### 预推免5 电子科技大学抗干扰国重
+由于个人决策的问题导致当天晚上到，第二天早上面，在华科之前早上面的，面试的老师很有水平！！！英文环节是翻译一段文献，真的很难！
+专业课问的也非常细和底层，望大家好好准备！ 
+
+### 预推免6 华中科技大学电信学院
+
+摆烂了，在天府机场的星巴克面的。。。byd店员一直在旁边催促我快滚蛋，个人感觉是bg面，海营，问了大概2min；当时寄了也没在意，觉得自己可以去北理了，事实证明，保研一定要坚持到最后的关头，永远会有不一样的惊喜等着你。
+
+
+
+
+
 
 
 **最后，对那些被我冒昧打扰过的老师道一声抱歉。**
