--- a/保研回忆录.md
+++ b/保研回忆录.md
@@ -3,7 +3,7 @@
 - [个人Bg](#个人Bg)
 - [我的经历](#我的经历)
 ## 写在前面的话
-本文模板来自zyc同学，在此拜谢。
+本文模板来自zyc同学，在此拜谢。  
 对于保研我并没有太多的感触，只记得不断的投不断的被拒不断的鸽，整个人生似乎在这一场保研game中被确定大致方向了，以下我的经历或许能给你一些启发。
 
 ## 个人Bg
@@ -15,11 +15,11 @@ CUMT（勉强算是中2吧，个人感觉在招生老师眼中跟末二区别不
 入营bar很迷，隔壁自动化10%开外无六级入了（有RM竞赛），通信这边我rk7点多%入的，但是我看绿群985很多高rk也报了珠海，却没入应该是刷oq了，最后还是被鸽穿了哈哈。  
 入营考核很简单，线上5分钟ppt介绍，问了几个专业课很基础的问题（通信原理、数字信号处理），英文则是问了数字信号处理的一个经典问题（关于专业课，然后项目问的也很浅（感觉那边老师水平不高，后来我联系本部那边在珠海校区招生的导师，雷达所组面，被拷打了一个小时！！！！md，确实有水平）  
 个人意见：珠海校区由于目前建设不完善，目前感觉就一个末九水平（湖大、重大这种），中九的title，适合211靠后、且目标研究所、国企的同学去。  
-在此推荐一个珠海做民用雷达的老师，态度很好，没有一点架子，做的也是毫米波雷达信号处理的方向，相比SAR好了无数倍这种（想去的同学可以私聊我，我推微信），其实方向好坏我在报名的时候是一点不清楚的，当时我天真的认为雷达信号处理都是一样的，可以转智能驾驶算法哈哈（在此感谢zyc，要不是他告诉我，我真就去bit了）
+在此推荐一个珠海做民用雷达的老师，态度很好，没有一点架子，做的也是毫米波雷达信号处理的方向，相比SAR好了无数倍这种（想去的同学可以私聊我，我推微信），其实方向好坏我在报名的时候是一点不清楚的，当时我天真的认为雷达信号处理都是一样的，可以转智能驾驶算法哈哈（在此拜谢zyc，要不是他告诉我，我真就去bit了，距离我向往的生活就更遥远了）
 
 ### 夏令营2 厦门大学柔性电子学院 电路与系统专硕
-非常感谢厦大老师让我入营，本次夏令营体验不错，具体流程已经忘记了，大概就是前一天报到，第一天参观+讲座，第二天上午讲座下午五点给出考核（考核是给一篇论文，要求第二天8点之前把ppt做好发到邮箱进行汇报），第三天考核+导师双选，第四天公布结果＋离校，整体流程相对轻松。另外提一嘴厦门大学翔安校区也是蛮漂亮的，可惜没进信院/AI院，不然我直接去了哈哈哈。
-由于第一次做这种论文汇报式的考核，我内心非常紧张和不安，当时和一位来自桂电的同学一起熬夜做，做了一晚上哈哈哈（最后效果还不错） ，在此推荐厦大柔电学院的苏晓倩老师，人非常好！！！老师做脑机接口/OECT等方向， 可以推去NTU读博，欢迎有意向的同学联系！
+非常感谢厦大老师让我入营，本次夏令营体验不错，具体流程已经忘记了，大概就是前一天报到，第一天参观+讲座，第二天上午讲座下午五点给出考核（考核是给一篇论文，要求第二天8点之前把ppt做好发到邮箱进行汇报），第三天考核+导师双选，第四天公布结果＋离校，整体流程相对轻松。另外提一嘴厦门大学翔安校区也是蛮漂亮的，可惜没进信院/AI院，不然我直接去了。  
+由于第一次做这种论文汇报式的考核，我内心非常紧张和不安，当时和一位来自桂电的同学一起熬夜做，做了一晚上哈哈哈（最后效果还不错） ，在此推荐厦大柔电学院的苏晓倩老师，人非常好！！！老师做脑机接口/OECT等方向， 可以推去NTU读博（组内出资），欢迎有意向的同学联系！
 
 
 ### 夏令营3 中国科学院空间应用工程与科学中心
@@ -28,13 +28,14 @@ CUMT（勉强算是中2吧，个人感觉在招生老师眼中跟末二区别不
 
 
 ### 夏令营4 电子科技大学深圳高等研究院无线技术与集成团队
-	当时成电深夏令营都快截止了，我随便报的这个团队，当时也不知道这个团队在成电是非常非常吊的（大伙都说无脑入，本部bar非常高，认识一个拿到复旦强组Offer的没过简历筛）………反正不知道怎么就拿到了，整体准备时间就3h左右，飞书线上面双机位，抽题库问。
+当时成电深夏令营（优选计划）都快截止了，我随便报的这个团队，当时也不知道这个团队在成电是非常非常吊的（大伙都说无脑入，本部bar非常高，认识一个拿到复旦强组Offer的没过简历筛）………反正不知道怎么就拿到了，整体准备时间就3h左右，飞书线上面双机位，抽题库问。  
+对了，当时前一天还在犹豫要不要参加这个面试（当时已经有了前面三个offer，再加上当时认为电科深比较菜，请假也很麻烦就不想去），
 
 ### 夏令营5 北京理工大学信电学院雷达技术研究院
 	当时联系到了bit的李阳老师，老师人非常好，过了一周左右给我安排了一场线上面试，然后来自Bit的一位高手拷打我了1h，当时土木楼的空调开得很低我却满头大汗，这也反映出我并没有很清楚我自己项目的细节、技术点，也为后面预推免手忙脚乱埋下了伏笔
 
 ### 预推免1 天津大学电信学院
-因为去年去了很多天大，所以我就套了一个导师想试试，结果他妈的找到了老师就让我报预推免，报了之后就让我线下去面试，结果线下面试是走过场，真正去不去还是靠你联系的导师给你的排位。当天我去了之后，导师跟我说：“同学，这个我们还是非常想要你，但是前面夏令营、预推免第一批招了这么多人，你也知道这个顺序的问题”。然后我问我在他那边可以排到多少（如果比较靠前我就准备来），结果他不说具体的名次，打了个马虎眼就下了逐客令，当时我心想：真逆天啊这学校，你们这样不怕鸽穿吗？
+因为去年去了很多天大，所以我就套了一个导师想试试，结果他妈的找到了老师就让我报预推免，报了之后就让我线下去面试，结果线下面试是走过场，真正去不去还是靠你联系的导师给你的排位。当天我去了之后，导师跟我说：“同学，这个我们还是非常想要你，但是前面夏令营、预推免第一批招了这么多人，你也知道这个顺序的问题”。然后我问我在他那边可以排到多少（如果比较靠前我就准备来），结果他不说具体的名次，打了个马虎眼就下了逐客令，当时我心想：真逆天啊这学校，你们这样不怕鸽穿吗？乐子学校  
 果然929当天找我发消息了，但我是肯定不会去了，我也已读不回嘻嘻：
 
 
