--- a/保研回忆录.md
+++ b/保研回忆录.md
@@ -2,7 +2,7 @@
 - [写在前面的话](#写在前面的话)
 - [个人Bg](#个人Bg)
 - [我的经历](#我的经历)
-- [北京理工大学珠海校区](#夏令营1 北京理工大学珠海校区085402通信工程专硕)
+- [北京理工大学珠海校区]_(### 夏令营1 北京理工大学珠海校区085402通信工程专硕)
 ## 写在前面的话
 本文模板来自zyc同学，在此拜谢。  
 对于保研我并没有太多的感触，只记得不断的投不断的被拒不断的鸽，整个人生似乎在这一场保研game中被确定大致方向了，以下我的经历或许能给你一些启发。
